<resources>
    <string name="app_short_name">True DST</string>
    <string name="app_name">True Daylight Savings</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sunset_hint">Sunset</string>
    <string name="sunrise_hint">Sunrise</string>
    <string name="date_hint">Date</string>
    <string name="midnight_sun">Midnight Sun</string>
    <string name="polar_night">Polar Night</string>
    <string name="title_activity_settings">Settings</string>

    <!-- START Preferences -->
    <string name="daytime_header">Daytime</string>
    <string name="messages_header">Messages</string>
    <string name="alarm_header">Alarm</string>
    <string name="alarms_title">Alarms</string>
    <string name="alarms_on_summary">Alarms enabled</string>
    <string name="alarms_off_summary">Alarms disabled</string>
    <string name="copyright_text">© Steve Bosman 2020</string>
    <string name="earliest_sleep_time">Earliest Sleep Time</string>
    <string name="earliest_sleep_time_summary">Set your desired earliest sleep time</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="sleep_duration_summary">Set how many hours you want to sleep for</string>
    <string name="latest_wakeup_time">Latest Wakeup Time</string>
    <string name="latest_wakeup_time_summary">Set your desired latest wakeup time</string>
    <string name="preference_sleep_duration">sleep_duration</string>
    <string name="preference_latest_wakeup_time">latest_wakeup_time</string>
    <string name="preference_earliest_sleep_time">earliest_sleep_time</string>
    <string name="preference_allow_alarms">allow_alarms</string>
    <string name="default_sleep_duration">8</string>
    <string name="default_earliest_sleep_time">21:00</string>
    <string name="default_latest_wakeup_time">08:00</string>
    <!-- END Preferences -->

</resources>
